Overflow is finally fixedgit add --all

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -91,7 +91,7 @@ body {
 
 
 .dndbox {
-    height: 400px;
+    height: 350px;
     padding-top: 50px;
 }
 .drop-box {
